# dbobject

./: .gitignore  Backend.h  CMakeLists.txt  MySQLBackend.cpp  MySQLBackend.h  Object.cpp  Object.h  Object.hpp  README.md  Tuple.cpp  Tuple.h  Tuple.hpp  Types.h  Vagrantfile  Vagrantsetup.sh
backends/: CMakeLists.txt
backends/mysql/: CMakeLists.txt  MySQLBackend.cpp  MySQLBackend.h
backends/mysql/test/: MySQLBackendTest.cpp
cmake/Modules/: FindMYSQLCONNECTORCPP.cmake
file/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  FileIO.cpp  FileIO.h  SQLConfFile.cpp  SQLConfFile.h
file/test/: CSVParserTest.cpp  FileIOTest.cpp  SQLConfFileTest.cpp
functional/: CMakeLists.txt  MapHelper.hpp  MapHelper.hxx  VectorHelper.cpp  VectorHelper.hpp  VectorHelper.hxx
polymorph/: CMakeLists.txt  Delayed.hpp  Delayed.hxx  MySQLTypeConverter.h  MySQLTypeConverter.hpp  PolymorphicType.hpp  PolymorphicType.hxx  ResultSetHelper.cpp  ResultSetHelper.hpp  ResultSetHelper.hxx  TypeConverter.cpp  TypeConverter.h  TypeConverter.hpp
query/: CMakeLists.txt  Insert.cpp  Insert.h  Query.cpp  Query.h  Select.cpp  Select.h  Update.cpp  Update.h
query/sql/: Alias.h  CMakeLists.txt  Clause.cpp  Clause.h  ColumnName.cpp  Expression.cpp  Expression.h  Function.h  JoinedTable.cpp  List.h  List.hpp  Literal.h  Literal.hpp  SchemaName.h  SimpleExpr.h  Sort.h  TableName.h
query/sql/test/: SQLClauseTest.cpp
sql/: Alias.hpp  All.h  Assignement.cpp  Assignement.h  Assignement.hpp  ColumnName.h  Expression.cpp  Expression.h  Function.cpp  Join.cpp  Join.h  JoinedTable.h  List.h  List.hpp  Literal.cpp  Literal.h  Literal.hpp  SchemaName.cpp  SimpleExpr.cpp  Sort.cpp  Sort.hpp  TableName.cpp
test/: MySQLBackendIntegrationTest.cpp  MySQLBackendIntegrationTest.h  MySQLBackendTest.cpp  ObjectIntegrationTest.cpp  ObjectIntegrationTest.h  ObjectTest.cpp  TupleIntegrationTest.cpp  TupleIntegrationTest.h  TupleTest.cpp  Utils.h  parameters.conf.sample
test/dummy/: DummyDBObject.h  DummyObject.cpp  DummyObject.h
test/functional/: MapHelperTest.cpp  VectorHelperTest.cpp
test/mock/: BackendMock.h  ResultSetMock.h
test/polymorph/: DelayedTest.cpp  PolymorphicTypeTest.cpp  TypeConverterTest.cpp
test/query/: SQLQueryTest.cpp
test/sql/: SQLClauseTest.cpp
typeconverter/: CMakeLists.txt  Datetime.cpp  Datetime.h  TypeConverter.cpp  TypeConverter.h  TypeConverter.hpp
typeconverter/test/: TypeConverterTest.cpp  TypeConverterTest.h
